--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -264,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Druhe nastajenja">
 <!ENTITY Ctr_cuibotbuttons	"Wosebite tłóčatka w 'přiměrjenskim' modusu">
 <!ENTITY Ctr_bookmarkoinpw	"Zapisk 'W nowym priwatnym woknje wočinić' w kontekstowym meniju zapołožkow">
-<!ENTITY Ctr_nodevtheme		"Nightly: Zmóžnjenju 'wuwiwarskeje drasty' zadźěwać">
+<!ENTITY Ctr_nodevtheme		"Zmóžnjenju 'wuwiwarskeje drasty' zadźěwać">
 
 <!ENTITY Ctr_experttweaks	"Rozšěrjene">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ je 'nowe rysowanske funkcije' zawjedł, kotrež su tuchwilu zamołwite za 'njereagowace rajtarki' na někotrych systemach. Znjemóžnjenje tutoho nastajenja tutón problem rozrisa.">
