--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -264,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Altre impostazioni">
 <!ENTITY Ctr_cuibotbuttons	"Aggiungi pulsanti in modalità personalizzazione">
 <!ENTITY Ctr_bookmarkoinpw	"Voce 'Apri in una nuova finestra anonima' nel menu contestuale dei segnlibri">
-<!ENTITY Ctr_nodevtheme		"Nightly: Impedisci l'attivazione del 'Developer Theme'">
+<!ENTITY Ctr_nodevtheme		"Impedisci l'attivazione del 'Developer Theme'">
 
 <!ENTITY Ctr_experttweaks	"Avanzate">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ ha introdotto nuove funzioni di rendering che sono responsabili del blocco delle schede in alcuni sistemi. Deselezionare questa opzione per risolvere il problema.">
