--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -264,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Outras Configurações">
 <!ENTITY Ctr_cuibotbuttons	"Botões Extra no Modo 'Personalização'">
 <!ENTITY Ctr_bookmarkoinpw	"Entrada 'Abrir em uma Nova Janela Particular' no Menu de Contexto dos Favoritos">
-<!ENTITY Ctr_nodevtheme		"Nightly: Evitar Habilitar o 'Tema do Desenvolvedor'">
+<!ENTITY Ctr_nodevtheme		"Evitar Habilitar o 'Tema do Desenvolvedor'">
 
 <!ENTITY Ctr_experttweaks	"Avançado">
 <!ENTITY Ctr_fx33layers		"O &brandShortName; 33+ Introduziu 'Novos Recursos de Renderização', Atualmente Responsáveis por 'Suspender Abas' em Alguns Sistemas. Desmarque esta Opção para Resolver este Problema.">
