--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -264,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Další nastavení">
 <!ENTITY Ctr_cuibotbuttons	"Vlastní tlačítka v režimu 'přizpůsobení'">
 <!ENTITY Ctr_bookmarkoinpw	"'Otevřít v novém anonymním okně' položky ze záložek v kontextovém menu">
-<!ENTITY Ctr_nodevtheme		"Nightly: Zabránit povolení 'Developer Theme'">
+<!ENTITY Ctr_nodevtheme		"Zabránit povolení 'Developer Theme'">
 
 <!ENTITY Ctr_experttweaks	"Pokročilé">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ zavedeny 'nové funkce' způsobující v některých OS 'sekání panelů'. Odškrtnutím předvolby lze vyřešit tuto chybu.">
