--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -264,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Andre indstillinger">
 <!ENTITY Ctr_cuibotbuttons	"Ekstra knapper i 'Tilpas' tilstand">
 <!ENTITY Ctr_bookmarkoinpw	"Menupunktet 'Åbn i et nyt privat vindue' i genvejsmenu til bogmærker">
-<!ENTITY Ctr_nodevtheme		"Nightly: Prevent 'Developer Theme' from being enabled">
+<!ENTITY Ctr_nodevtheme		"Prevent 'Developer Theme' from being enabled">
 
 <!ENTITY Ctr_experttweaks	"Avanceret">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ introducerede 'nye renderingsfunktioner' som i øjeblikket er skyld i 'faneblade som hænger' på nogle systemer. Fjern markeringen for at rette problem.">
