--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -264,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Άλλες ρυθμίσεις">
 <!ENTITY Ctr_cuibotbuttons	"Επιπρόσθετα κουμπιά στη λειτουργία προσαρμογής">
 <!ENTITY Ctr_bookmarkoinpw	"Καταχώριση «&Ctr_openInPrivateWindow;» στο μενού περιεχομένου σελιδοδεικτών">
-<!ENTITY Ctr_nodevtheme		"Nightly: Αποτροπή ενεργοποίησης του «Θέματος έκδοσης για προγραμματιστές»">
+<!ENTITY Ctr_nodevtheme		"Αποτροπή ενεργοποίησης του «Θέματος έκδοσης για προγραμματιστές»">
 
 <!ENTITY Ctr_experttweaks	"Προηγμένες">
 <!ENTITY Ctr_fx33layers		"Ο &brandShortName; 33+ εισήγαγε «νέα χαρακτηριστικά απόδοσης», τρεχόντως υπεύθυνα για το «κρέμασμα καρτελών» σε ορισμένα συστήματα. Αποεπιλέγοντας αυτή την προτίμηση επιλύεται αυτό το ζήτημα.">
