--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -264,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"其它设置">
 <!ENTITY Ctr_cuibotbuttons	"在“定制”模式中显示额外的按钮">
 <!ENTITY Ctr_bookmarkoinpw	"书签右键菜单中显示“在新建隐私浏览窗口中打开”">
-<!ENTITY Ctr_nodevtheme		"Nightly: 阻止“开发者主题”被启用">
+<!ENTITY Ctr_nodevtheme		"阻止“开发者主题”被启用">
 
 <!ENTITY Ctr_experttweaks	"高级">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ 引入“新渲染器功能”目前可能是某些系统“标签页卡死”的主要原因。不选中此项以解决该问题。">
