--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -50,8 +50,8 @@
 <!ENTITY Ctr_tabheightinfo	"Niske hódnoty zwobraznjenske zmylki w maksiměrowanym napohledźe zawinuja!">
 <!ENTITY Ctr_tabmaxwidth	"Maksimalna šěrokosć:">
 <!ENTITY Ctr_tabminwidth	"Minimalna šěrokosć:">
-<!ENTITY Ctr_tabclipwidth	"Clip-width:">
-<!ENTITY Ctr_tabclipwidthI	"Set 'clip width' to '1' manually!">
+<!ENTITY Ctr_tabclipwidth	"Klipowa šěrokosć:">
+<!ENTITY Ctr_tabclipwidthI	"Stajće 'klipowu šěrokosć' manuelnje na '1'!">
 <!ENTITY Ctr_tabwidthinfo	"Minimalna a maksimalna šěrokosć rajtarkow so přez TabMixPlus kontrolujetej">
 <!ENTITY Ctr_tabwidthinfo2	"Minimalna a maksimalna šěrokosć rajtarkow so přez TabUtilities kontrolujetej">
 <!ENTITY Ctr_tabwidthinfo3	"Hódnoty pod 48px w najwjace padach zwobraznjenske zmylki zawinuja!">
@@ -139,7 +139,8 @@
 <!ENTITY Ctr_hidezoomres	"Skalowanske elementy na symbolowej lajsće: Tłóčatko za wróćostajenje skalowanja schować">
 <!ENTITY Ctr_alt_newtabp	"Strona noweho rajtarka: alternatiwny napohlad">
 <!ENTITY Ctr_alt_addonsp	"Strona 'wjace info' přidatkow: alternatiwny napohlad">
-<!ENTITY Ctr_addonversion	"Add-on managers add-on lists: show add-on version">
+<!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
+<!ENTITY Ctr_addonversion	"Přehlad přidatkow: wersiju přidatka pokazać">
 <!ENTITY Ctr_bmbutpanelm	"Tłóčatko menija zapołožkow: napohlad dialogoweho menija">
 <!ENTITY Ctr_bmbutnotext	"Tłóčatko menija zapołožkow: tekst na lajśce zapołožkow schować">
 <!ENTITY Ctr_skipprintpr	"Ćišćerske tłóčatko: ćišćerski přehlad přeskočić">
@@ -157,8 +158,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Kliknjenje na wozjewjenje aktiwity wočinja slědowacy URL:">
 <!ENTITY Ctr_navthrobber2	"URL přidać abo prózdne wostajić">
-<!ENTITY Ctr_anewtaburl		"New tab page url">
-<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
+<!ENTITY Ctr_anewtaburl		"URL strony noweho rajtarka">
+<!ENTITY Ctr_anewtaburlcb	"URL swójskeje strony noweho rajtarka (standard: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Barbne mjena, heksadecimalne kody, rgb(a)- a hsl(a)-hódnoty so podpěruja.">
 <!ENTITY Ctr_tab_tf_info2	"Zapodaća so njepřepruwuja!">
@@ -187,7 +188,7 @@
 <!ENTITY Ctr_starinurl		"Hwězdne tłóčatko">
 <!ENTITY Ctr_feedinurl		"Kanalowe tłóčatko">
 <!ENTITY Ctr_hideurelstop	"Tłóčatce Stój a Znowa adresowych lajstow schować">
-<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
+<!ENTITY Ctr_hideurlgo		"Tłóčatko 'Start' schować">
 <!ENTITY Ctr_urlbardropm	"Tłóčatko na kónc adresoweho pola přesunyć">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
@@ -242,7 +243,7 @@
 <!ENTITY Ctr_nonavtbborder	"Hornje symbolowe lajsty: ramiki symboloweje lajsty wotstronić">
 <!ENTITY Ctr_hidesbclose	"Bóčnicy: Tłóčatko Začinić bóčnicy schować">
 <!ENTITY Ctr_notextshadow	"Symbolowe lajsty: sćin za tekst symboloweje lajsty a rajtarki schować">
-<!ENTITY Ctr_chevronfix		"Nawigaciska lajsta: dwójny šipk ('More Tools') na kóncu symboloweje lajsty schować">
+<!ENTITY Ctr_chevronfix		"Nawigaciska lajsta: dwójny šipk ('Dalše nastroje') na kóncu symboloweje lajsty schować">
 <!ENTITY Ctr_tbsep_winc		"Hornje symbolowe lajsty: přidatne dźělenske linije">
 
 <!ENTITY Ctr_closeabarbut	"Tłóčatko 'Začinić' na lajsće přidatkow schować">
@@ -274,7 +275,7 @@
 <!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ je 'nastajenja w rajtarku' zawjedł. Znjemóžnjenje tutoho nastajenja stare wokno nastajenjow wobnowi.">
 <!ENTITY Ctr_fx38reader		"&brandShortName; 38+ je nowy 'čitanski modus' zawjedł. Hdyž so  tute nastajenja wotwola, znjemóžni so a jeho symbol wotstroni so z adresoweho pola.">
 <!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ je nowu funkciju 'Pocket' zawjedł. Hdyž so  tute nastajenje wotwoli, znjemóžni so a jeje tłóčatko wotstroni so ze symbolowych lajstow.">
-<!ENTITY Ctr_fx38pocket2	"Note: Moving 'Pocket'-button to 'customizing palette' before disabling this preference also removes 'Pocket' entries in bookmarks and reader menus.">
+<!ENTITY Ctr_fx38pocket2	"Kedźbu: Přez přesuwanje tłóčatka 'Pocket' do 'přiměrjenskeho wokna' před znjemóžnjenjom tutoho nastajenja wotstroni tež zapiski 'Pocket' w menijomaj zapołožkow a čitanskeho modusa.">
 <!ENTITY Ctr_e_omtc			"OMTC / problem z wisacymi rajtarkami">
 <!ENTITY Ctr_e_searchui		"Pytanski powjerch">
 <!ENTITY Ctr_e_loop			"Zawołanje a konwersacija">
@@ -303,7 +304,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"W nowym priwatnym woknje wočinić">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Prěnje kroki">
-<!ENTITY goCmd.label		"Go">
+<!ENTITY goCmd.label		"Start">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "W">
