--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -137,8 +137,8 @@
 <!ENTITY Ctr_hidezoomres	"Управління масштабом на панелі: приховати кнопку скидання масштабу">
 <!ENTITY Ctr_alt_newtabp	"Сторінка нової вкладки: альтернативний вигляд">
 <!ENTITY Ctr_alt_addonsp	"Сторінка «Детальніше» в Додатках: альтернативний вигляд">
-<!ENTITY Ctr_alt_addonsm	"Add-on manager: alternative appearance">
-<!ENTITY Ctr_addonversion	"Add-on managers add-on lists: show add-on version">
+<!ENTITY Ctr_alt_addonsm	"Менеджер додатків: альтернативний вигляд">
+<!ENTITY Ctr_addonversion	"Списки додатків у Менеджері додатків: показати версію додатка">
 <!ENTITY Ctr_bmbutpanelm	"Кнопка меню закладок: вигляд меню панелі">
 <!ENTITY Ctr_bmbutnotext	"Кнопка меню закладок: приховати ярлик на панелі закладок">
 <!ENTITY Ctr_skipprintpr	"Кнопка «Друк»: пропустити передогляд друку">
@@ -156,8 +156,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Клік на індикаторі активності відкриває визначену адресу:">
 <!ENTITY Ctr_navthrobber2	"Додати адресу або залишити порожнім">
-<!ENTITY Ctr_anewtaburl		"New tab page url">
-<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
+<!ENTITY Ctr_anewtaburl		"Адреса сторінки в новій вкладці">
+<!ENTITY Ctr_anewtaburlcb	"Налаштовувана адреса сторінки в новій вкладці (за замовчуванням: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Назви кольорів, hex коди, rgb(a) та hsl(a) величини підтримуються.">
 <!ENTITY Ctr_tab_tf_info2	"Введене не буде перевірятися!">
@@ -186,7 +186,7 @@
 <!ENTITY Ctr_starinurl		"Зірка">
 <!ENTITY Ctr_feedinurl		"Кнопка RSS">
 <!ENTITY Ctr_hideurelstop	"Приховати кнопку «Зупинити та Перезавантажити»">
-<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
+<!ENTITY Ctr_hideurlgo		"Приховати кнопку «Перейти»">
 <!ENTITY Ctr_urlbardropm	"Перемістити маркер-трикутник в кінець рядку адреси">
 <!ENTITY Ctr_hideprbutton	"Приховати інфо кнопку «спливаюче вікно блоковано»">
 <!ENTITY Ctr_urlbar_ib		"Індикатори справжності панелі рядку адреси">
